[package]
name = "joyshop"
version = "0.1.0"
authors = ["Sofia Winters <a@sofia.win>"]
edition = "2018"

[dependencies]
joycon-rs = "0.6.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
win_key_codes = "0.1.2"
winapi = { version = "0.3.9", features = ["winuser", "imm"] }
libc = "0.2.82"
once_cell = "1.5.2"
crossbeam-channel = "0.5.0"
